@@ -28,6 +28,7 @@ dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.+'
     testCompile 'org.junit.jupiter:junit-jupiter-params:5.+' // parameterized tests
+    testCompile 'org.jmockit:jmockit:1.+'
     testCompile 'org.assertj:assertj-core:3.+'
     testCompile 'net.java.quickcheck:quickcheck:0.+'
 
@@ -35,6 +36,10 @@ dependencies {
 }
 
 
+
+junitPlatformTest {
+    jvmArgs "-Djdk.attach.allowAttachSelf"
+}
 
 test {
     systemProperties 'property': 'value'
